remove article endpoint
