# app/api/v1/users/createUser.swagger.yml
@@ -48,12 +48,8 @@
                         _links:
                             type: object
                             required:
-                                - id
                                 - self
                             properties:
-                                id:
-                                    type: number
-                                    example: 1
                                 self:
                                     type: object
                                     required:
@@ -63,7 +59,27 @@
                                             type: string
                                             format: uri
                                             example: http://localhost:8080/users/1
+                                createArticle:
+                                    type: object
+                                    required:
+                                        - href
+                                    properties:
+                                        href:
+                                            type: string
+                                            format: uri
+                                            example: http://localhost:8080/users/1/articles
+                                listArticles:
+                                    type: object
+                                    required:
+                                        - href
+                                    properties:
+                                        href:
+                                            type: string
+                                            format: uri
+                                            example: http://localhost:8080/users/1/articles
             400:
                 description: Bad Request
+            401:
+                description: Unauthorized
             500:
                 description: Internal server error
